# Django-rest-BookStore

./: .gitignore  .swo  .swp  Dockerfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
