[project]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = [
    {name = "JaoVicy",email = "filipimjoa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.0"

