[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["JaoVicy <filipimjoa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1.7,<6.0.0"
djangorestframework = "^3.16.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2,<6.0"
pytest = ">=8.3.5,<9.0.0"
factory-boy = ">=3.3.3,<4.0.0"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.3.0"
python-dotenv = "^1.1.1"
whitenoise = "^6.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"